<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mine_shape_round_corner_white_store"
    android:orientation="vertical"
    android:clickable="true"
    tools:context=".page.sign.DailySignActivity"
    android:focusable="true">

    <ImageView
        android:id="@+id/mine_store_line"
        android:layout_width="27dp"
        android:layout_height="5dp"
        android:layout_marginTop="9dp"
        android:src="@drawable/mine_shape_round_corner_store_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/mine_store_arrow_left"
        android:layout_marginStart="5dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:alpha="0"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:srcCompat="@drawable/mine_ic_arrow_left"
        android:contentDescription="@string/mine_sign_store_back"
        app:layout_constraintBottom_toTopOf="@+id/mine_store_guildeline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mine_store_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mine_stamp_center_title"
        android:textColor="@color/common_level_two_font_color"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/mine_store_guildeline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/mine_store_arrow_left"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="邮豆中心" />

    <ImageView
        android:id="@+id/mine_store_iv_diamond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:src="@drawable/mine_ic_sign_diamond"
        app:layout_constraintEnd_toStartOf="@+id/mine_store_tv_integral"
        tools:layout_editor_absoluteY="38dp" />

    <TextView
        android:id="@+id/mine_store_tv_integral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:text="@string/mine_sign_store_integral_default"
        android:textColor="@color/common_level_two_font_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/mine_store_iv_diamond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mine_store_iv_diamond"
        tools:text="156" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mine_store_guildeline">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mine_store_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="50dp"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="2" />
    </FrameLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mine_store_guildeline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="95dp" />

</androidx.constraintlayout.widget.ConstraintLayout>