<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="exChangeDetail"
            type="com.mredrock.cyxbs.mine.network.model.stamp.ExChangeDetail" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/mine_stamp_exchange_detail_top_text_color"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mine_cl_stamp_exchange_detail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="53dp">

            <RelativeLayout
                android:id="@+id/mine_rl_exchange_detail_back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/mine_stamp_detail_ripple"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="17dp"
                    android:background="@drawable/mine_vector_stamp_detail_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:gravity="center"
                android:text="@string/mine_stamp_exchange_detail"
                android:textColor="@color/mine_stamp_exchange_detail_top_text_color"
                android:textAppearance="@style/mine_stamp_exchange_detail"
                app:layout_constraintBottom_toBottomOf="@+id/mine_rl_exchange_detail_back"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/mine_rl_exchange_detail_back"
                app:layout_constraintTop_toTopOf="@+id/mine_rl_exchange_detail_back" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/mine_shape_stamp_exchange_detail_decoration" />

        <androidx.cardview.widget.CardView
            android:id="@+id/mine_cardView_stamp_exchange_detail"
            changeAllBackGround="@{exChangeDetail.collected}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginRight="16dp">

            <ImageView
                android:id="@+id/mine_iv_stamp_exchange_detail"
                android:layout_width="wrap_content"
                changeCircleBackGround="@{exChangeDetail.collected}"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="4dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="21dp"
                android:paddingEnd="10dp"
                android:paddingBottom="18dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/mine_stamp_exchange_detail_order_code"
                    android:textAppearance="@style/mine_stamp_exchange_detail_code_num" />

                <TextView
                    android:id="@+id/mine_tv_exchange_code_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(exChangeDetail.orderId)}"
                    android:textAppearance="@style/mine_stamp_exchange_real_code_num" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text='@{ exChangeDetail.collected ? ` ` : @string/mine_stamp_exchange_ps }'
                    android:textAppearance="@style/mine_stamp_exchange_ps" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="16dp"
            android:text="@string/mine_stamp_exchange_goods_detail"
            android:textColor="@color/mine_stamp_goods_detail_title"
            android:textStyle="bold"
            android:textAppearance="@style/mine_stamp_exchange_goods_detail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@{ `商品名称：` + `       ` + exChangeDetail.wareName}"
            android:textAppearance="@style/mine_stamp_exchange_common" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text='@{`商品价格：` + `       ` + String.valueOf(exChangeDetail.amount)}'
            android:textAppearance="@style/mine_stamp_exchange_common" />

        <TextView
            long2Time="@{exChangeDetail.date}"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/mine_stamp_exchange_common" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text='@{`商品价格：` + `       ` + String.valueOf(exChangeDetail.collected ? `已领取` : `待领取`) }'
            android:textAppearance="@style/mine_stamp_exchange_common" />
    </LinearLayout>
</layout>